--- a/ReactDev/pekan-pi-front/src/Pages/Pantry.css
+++ b/ReactDev/pekan-pi-front/src/Pages/Pantry.css
@@ -14,3 +14,11 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.h3Pantry {
+  font-size: 20px;
+  text-align: center;
+  font-weight: 700;
+  color: #3b8dff;
+  margin: 0;
+}
