--- a/ReactDev/pekan-pi-front/src/Pages/split.css
+++ b/ReactDev/pekan-pi-front/src/Pages/split.css
@@ -17,6 +17,16 @@
   align-items: center;
 }
 
+.titleL {
+
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  margin-bottom: 1rem;
+}
+
 .boxL {
   margin: 10px;
   height: 500px;
@@ -98,15 +108,6 @@
   text-align: center;
   margin: 10px;
   padding: 10px;
-  color: rgb(255, 255, 255);
-}
-
-.titleL {
-  font-size: 2.5rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  margin-bottom: 1rem;
   color: rgb(255, 255, 255);
 }
 
