comments and cleaning profile and homecss

--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -33,6 +33,8 @@ nav .ul-menu li {
   display: inline-block;
   margin-right: 25px;
 }
+
+/* navbar links at the top */
 nav .ul-menu li a {
   text-decoration: none;
   color: inherit;
@@ -45,7 +47,7 @@ nav .ul-menu li a:hover {
   color: #ff523b;
   background: none;
 }
-
+ /* navbar logout button */
 nav .ul-menu li div a:hover {
   color: black;
   background: none;
@@ -238,6 +240,7 @@ small {
   height: 100v;
 }
 
+/* logout button on the navbar */
 .logoutbutton {
   display: inline-block;
   background: #ff523b;
@@ -474,7 +477,6 @@ h1 {
   color: #3dc6d3;
   background: none;
 }
-
 
 /* make headers white when dark-mode*/
 .darkmode-page p {
