Commented, removed console.log
From pantrySearch.jsx, RecipiesPage.jsx
Commented out Recipe.css, recipesList.jsx

--- a/ReactDev/pekan-pi-front/src/Pages/Recipe.css
+++ b/ReactDev/pekan-pi-front/src/Pages/Recipe.css
@@ -3,7 +3,7 @@
   padding: 0;
 } */
 
-body {
+/* body {
   font-family: "Roboto", sans-serif;
   background-color: #f3f3f3;
 }
@@ -16,7 +16,7 @@ body {
 
 .details{
   height: 300vh;
-}
+} */
 
 /* .RecipiesPage {
 
