--- a/ReactDev/pekan-pi-front/src/Pages/Pantry.css
+++ b/ReactDev/pekan-pi-front/src/Pages/Pantry.css
@@ -17,6 +17,10 @@ body {
   font-size: 20px;
   text-align: center;
   font-weight: 700;
-  color: #3b8dff;
+  color: #ff523b;
   margin: 0;
+}
+
+.h3Pantry.darkmode {
+  color: #3dc6d3;
 }
